# azure_func_docker

./: .env.example  .gitignore  Dockerfile  main.py  profile.publishsettings  pyproject.toml  requirements.txt  successful_poetry.yml
.github/workflows/: azure_function_deploy.yml  main_bahaFunctionApp.yml  main_bahafunctionapp.yml  main_bahasecondfunctionapp.yml
azure_function/: __init__.py  config.py  container.py  function.json  services.py
function/: requirements.txt
my_function/: __init__.py  function.json  settings.py
myfunction/: Dockerfile  __init__.py  function.json  function_app.py
tests/: test.py  test_ldap.py
